--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top py-3 m-0">
+        <nav class="navbar navbar-expand-lg py-3 m-0">
             <div class="container">
                 <!-- Container wrapper -->
                 <!-- Navbar brand -->
@@ -53,7 +53,7 @@
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a href="./contact.html" style="color: #fff">
-                                <button type="button" class="px-5 btn pt-2 contact-btn">
+                                <button type="button" class="px-5 btn btn-warning pt-2">
                                     Explore Now
                                 </button>
                             </a>
@@ -104,14 +104,64 @@
                 </div>
             </div>
         </section>
-
-        <section id = "roadmap" class = "roadmap">
-            <div class = "container">
-                <h1>Hello Bhaiyaaaaaa</h1>
-                <p>Change made here.</p>
-                <h2>New change</h2>
-        </section>
     </header>
+
+
+    <section id="roadmap" class="roadmap">
+        <img src="./assets/img/roadmap road.png" style="position: absolute;top: 0; bottom: 0; right: 0; height: 100vh"
+            alt="">
+        <h1 class="text-right">ROADMAP</h1>
+        <div class="point point-1">
+            <div class="d-flex align-items-center justify-content-center"
+                style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
+                1</div>
+            <div style="flex: 1">---------></div>
+            <div style = "width: 300px">
+                <h2 class="point-title">Lorem ipsum</h2>
+                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
+                    sed. Et facilisi sapien praesent vitae. </p>
+            </div>
+        </div>
+        <div class="point point-2">
+            <div style="flex: 1">
+                <div class="d-flex align-items-center justify-content-center"
+                    style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
+                    2</div>
+            </div>
+            <div>---------></div>
+            <div style = "width: 300px">
+                <h2 class="point-title">Lorem ipsum</h2>
+                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
+                    sed. Et facilisi sapien praesent vitae. </p>
+            </div>
+        </div>
+        <div class="point point-3">
+            <div style = "width: 300px">
+                <h2 class="point-title">Lorem ipsum</h2>
+                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
+                    sed. Et facilisi sapien praesent vitae. </p>
+            </div>
+            <div>---------</div>
+            <div>
+                <div class="d-flex align-items-center justify-content-center"
+                    style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
+                    3</div>
+            </div>
+        </div>
+        <div class="point point-4">
+            <div style = "width: 300px">
+                <h2 class="point-title">Lorem ipsum</h2>
+                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
+                    sed. Et facilisi sapien praesent vitae. </p>
+            </div>
+            <div>---------</div>
+            <div>
+                <div class="d-flex align-items-center justify-content-center"
+                    style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
+                    3</div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
