--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Ether Surfers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -116,7 +117,7 @@
                 style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
                 1</div>
             <div style="flex: 1">---------></div>
-            <div style = "width: 300px">
+            <div style="width: 300px">
                 <h2 class="point-title">Lorem ipsum</h2>
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
                     sed. Et facilisi sapien praesent vitae. </p>
@@ -129,14 +130,14 @@
                     2</div>
             </div>
             <div>---------></div>
-            <div style = "width: 300px">
+            <div style="width: 300px">
                 <h2 class="point-title">Lorem ipsum</h2>
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
                     sed. Et facilisi sapien praesent vitae. </p>
             </div>
         </div>
         <div class="point point-3">
-            <div style = "width: 300px">
+            <div style="width: 300px">
                 <h2 class="point-title">Lorem ipsum</h2>
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
                     sed. Et facilisi sapien praesent vitae. </p>
@@ -149,7 +150,7 @@
             </div>
         </div>
         <div class="point point-4">
-            <div style = "width: 300px">
+            <div style="width: 300px">
                 <h2 class="point-title">Lorem ipsum</h2>
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
                     sed. Et facilisi sapien praesent vitae. </p>
@@ -162,6 +163,36 @@
             </div>
         </div>
     </section>
+
+    <footer style = "padding: 50px 0 0 0; background: #01B3E2; color: #fff;">
+        <div class="container">
+            <div class="row px-4">
+                <div class="col-lg-8">
+                    <h5>Community</h5>
+                    <p class = "w-50">Together with other DeFi products Ether Surfer will truly be a demand for gamers</p>
+                    <div class="d-flex">
+                        <i class="fa fa-facebook mr-3"></i>
+                        <i class="fa fa-twitter mr-3"></i>
+                        <i class="fa fa-instagram mr-3"></i>
+                        <i class="fa fa-pinterest mr-3"></i>
+                    </div>
+                </div>
+                <div class = "col-lg-4">
+                    <h5>Resources</h5>
+                    <ul style = "list-style-type: none;">
+                        <li>Documentation</li>
+                        <li>Whitepaper</li>
+                        <li>Media Kit</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class = "px-4" style = "display: flex; justify-content: space-between;">
+                <img src="./assets/img/logo.png" style= "width: 50px; height: auto;" alt="">
+                <span>&copy; Ether Surfers. All rights reserved</span>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
