--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                             <button class="btn btn-warning px-5 my-3">Marketplace</button>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <img src="./assets/img/boy.svg" class="img-fluid" alt="">
+                    <div class="col-lg-6" style = "position: relative">
+                        <img src = "./assets/img/chest.svg" class = "img-fluid" style = "position: absolute;  top: -50px; left: -50px; z-index: 0">
+                        <img src="./assets/img/boy.svg" class="img-fluid" style = "z-index: 2; position: absolute; margin: auto auto;right: 0" alt="">
                     </div>
                 </div>
             </div>
@@ -109,14 +110,14 @@
 
     <section id="card" class=" cardpage" style=" background: #530f70;">
         <div class=" container">
-            <h1 class="text-center text-white">Lorem ipsum dolor sit amet consectetur. Id lacus habitant morbi faucibus.
+            <h1 class="text-center text-white sec-head">Lorem ipsum dolor sit amet consectetur. Id lacus habitant morbi faucibus.
             </h1>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="cardd">
                         <div>
-                            <h6>Lorem Ipsum</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
+                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
+                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
                                 dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
                                 autem sed possimus tempora, cum alias.</p>
                         </div>
@@ -191,7 +192,7 @@
                 </div>
                 <div class="col-lg-4" style= "position: relative">
                     <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt="">
-                    <img src="./assets/img/mockup.svg" style="height: auto;z-index: 99;position: absolute;" alt=""></a>
+                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto; z-index: 99;position: absolute;" alt=""></a>
 
                 </div>
             </div>
@@ -202,7 +203,7 @@
     <section id="roadmap" class="roadmap">
         <img src="./assets/img/roadmap road.png" style="position: absolute;top: 0; bottom: 0; right: 0; height: 100vh"
             alt="">
-        <h1 class="text-right">ROADMAP</h1>
+        <h1 class="text-right sec-head">ROADMAP</h1>
         <div class="point point-1">
             <div class="d-flex align-items-center justify-content-center"
                 style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
@@ -256,7 +257,7 @@
     </section>
     <section id="tokenomics" class="tokenomics" style="background-color:#7d097c;">
         <div class="container">
-            <h1 style="color:#FFFFFF ;font-weight: 400; font-size :50px;">Tokenomics</h1>
+            <h1 class = "sec-head" style="color:#FFFFFF ;font-weight: 400; font-size :50px;">Tokenomics</h1>
             <div class="d-flex flex-row  innerRow">
                 <div class=" d-flex flex-column col-lg-3 justify-content-lg-around">
                     <div>
