--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     </ul>
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="./contact.html" style="color: #fff">
-                                <button type="button" class="px-5 btn btn-warning pt-2">
+                            <a href="./contact.html">
+                                <button type="button" class="px-2 text-white btn btn-warning">
                                     Explore Now
                                 </button>
                             </a>
@@ -69,16 +69,14 @@
         <section id="hero" class="hero-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 d-flex align-items-center">
+                    <div class="col-lg-6 d-flex align-items-center justify-content-center">
                         <div
                             style="width: 80%; backdrop-filter: blur(4.5px); border-radius: 25px; background: rgba(96, 1, 82, 0.8);; text-align: center;padding: 20px;">
                             <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
-                            <h5 class="text-white mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
-                            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quia
-                                cupiditate et quasi non atque suscipit quam! Ratione dolorum repudiandae ipsum. Harum,
-                                quibusdam delectus expedita deserunt neque optio alias exercitationem.</p>
-                            <button class="btn btn-light px-5">Marketplace</button><br />
-                            <button class="btn btn-warning px-5 my-3">Marketplace</button>
+                            <h5 class="text-white mt-3 top-head">Lorem ipsum dolor sit amet consectetur. Sed lorem suspendisse faucibus eu.</h5>
+                            <p class="text-white top-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim sed. Et facilisi sapien praesent vitae. </p>
+                            <button class="btn btn-light px-5 mt-3 mark-btn">Marketplace</button><br />
+                            <button class="btn btn-warning px-5 my-3 mark-btn">Marketplace</button>
                         </div>
                     </div>
                     <div class="col-lg-6" style = "position: relative">
@@ -97,10 +95,8 @@
                     </div>
                     <div class="col-lg-6 d-flex align-items-center text-right">
                         <div>
-                            <h5 class="text-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h5>
-                            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fuga
-                                assumenda error tempore, obcaecati rem accusantium dolore dolorum quo itaque, corporis
-                                in perferendis excepturi est beatae suscipit nam cumque iure?</p>
+                            <h5 class="text-white bear-head">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h5>
+                            <p class="text-white">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim sed. Et facilisi sapien praesent vitae. Cursus blandit in leo ut nisi enim. Odio et montes lorem ultrices facilisis egestas egestas. Sed risus id ut pulvinar auctor pulvinar. Enim at faucibus sit.</p>
                         </div>
                     </div>
                 </div>
@@ -110,7 +106,7 @@
 
     <section id="card" class=" cardpage" style=" background: #530f70;">
         <div class=" container">
-            <h1 class="text-center text-white sec-head">Lorem ipsum dolor sit amet consectetur. Id lacus habitant morbi faucibus.
+            <h1 class="text-center text-white card-head">Lorem ipsum dolor sit amet consectetur. Id lacus habitant morbi faucibus.
             </h1>
             <div class="row">
                 <div class="col-lg-6">
@@ -129,8 +125,8 @@
                 <div class="col-lg-6">
                     <div class="cardd">
                         <div>
-                            <h6>Lorem Ipsum</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
+                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
+                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
                                 dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
                                 autem sed possimus tempora, cum alias.</p>
                         </div>
@@ -142,8 +138,8 @@
                 <div class="col-lg-6">
                     <div class="cardd">
                         <div>
-                            <h6>Lorem Ipsum</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
+                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
+                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
                                 dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
                                 autem sed possimus tempora, cum alias.</p>
                         </div>
@@ -155,8 +151,8 @@
                 <div class="col-lg-6">
                     <div class="cardd">
                         <div>
-                            <h6>Lorem Ipsum</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
+                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
+                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
                                 dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
                                 autem sed possimus tempora, cum alias.</p>
                         </div>
@@ -165,28 +161,27 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
 
     <section id="playnow" class="playnow"
-        style="height: 800px;overflow-x: hidden; overflow-y: hidden; background-image:linear-gradient(0deg,rgba(117,75,166, 0.90),rgba(109,49,128, 0.80)), url('./assets/img/Rectangle\ 57.png'); background-size: cover; background-repeat: no-repeat;">
+        style="position: relative; height: 800px;overflow-x: hidden; overflow-y: hidden; background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), radial-gradient(17.32% 34.78% at 20.71% 26.77%, rgba(202, 252, 1, 0.15) 0%, rgba(202, 252, 1, 0) 100%), linear-gradient(180deg, #550058 0%, #BD40C8 100%); background-size: cover; background-repeat: no-repeat;">
+        <img src="./assets/img/roadmap.svg" style = "position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1;width: 100%;" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 d-flex align-items-center">
-                    <div>
-                        <h1 class=" playnowHeading">
+                    <div style = "margin-top: 50px;">
+                        <h1 class="sec-head playnowHeading">
                             Lorem ipsum dolor sit amet consectetur. Sed lorem suspendisse faucibus eu.</h1>
-                        <p class="playnowContent">
+                        <p class="playnowContent mt-5 mb-5">
                             Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim sed. Et
                             facilisi
                             sapien praesent vitae. </p>
-                        <div class="buttonBar">
-                            <button type="button" class="btn btn-light mx-2">Marketplace <i
-                                    class="fa fa-arrow-right"></i></button>
-                            <button type="button" class="btn btn-warning mx-3">Play Now <i
-                                    class="fa fa-arrow-right"></i></button>
-
+                        <div class = "d-flex">
+                            <img src="./assets/img/google play.png" class = "img-fluid mr-4" alt="">
+                            <img src="./assets/img/app store.png" class = "img-fluid" alt="">
                         </div>
                     </div>
                 </div>
@@ -257,11 +252,11 @@
     </section>
     <section id="tokenomics" class="tokenomics" style="background-color:#7d097c;">
         <div class="container">
-            <h1 class = "sec-head" style="color:#FFFFFF ;font-weight: 400; font-size :50px;">Tokenomics</h1>
-            <div class="d-flex flex-row  innerRow">
-                <div class=" d-flex flex-column col-lg-3 justify-content-lg-around">
+            <h1 class = "sec-head text-white">Tokenomics</h1>
+            <div class="row">
+                <div class="d-flex flex-column col-lg-3 justify-content-lg-around">
                     <div>
-                        <h3 class=" mt-5 totalSupply">Total Supply</h3>
+                        <h3 class="totalSupply">Total Supply</h3>
                         <h4 class="tokenAmount">1,000,000,000</h4>
                     </div>
                     <div>
@@ -270,26 +265,28 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="./assets/img/Tokenomics.svg" style="height: 500px;" alt=""></a>
+                    <img src="./assets/img/Tokenomics.svg" class = "img-fluid" alt=""></a>
 
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 d-flex align-items-center">
                     <div>
-                        <h3 class="totalSupply">Total Supply</h3>
-                        <h4 class="tokenAmount">1,000,000,000</h4>
-                    </div>
-                    <div>
-                        <h3 class="totalSupply">Total Supply</h3>
-                        <h4 class="tokenAmount">1,000,000,000</h4>
-                    </div>
-                    <div>
-                        <h3 class="totalSupply">Total Supply</h3>
-                        <h4 class="tokenAmount">1,000,000,000</h4>
-                    </div>
-
-                    <div>
-                        <h3 class="totalSupply">Total Supply</h3>
-                        <h4 class="tokenAmount">1,000,000,000</h4>
+                        <div class = "toke-item">
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
+                        <div class = "toke-item">
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
+                        <div class = "toke-item">
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
+    
+                        <div class = "toke-item">
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
                     </div>
                 </div>
             </div>
