--- a/index.html
+++ b/index.html
@@ -75,13 +75,12 @@
                             <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
                             <h5 class="text-white mt-3 top-head">Lorem ipsum dolor sit amet consectetur. Sed lorem suspendisse faucibus eu.</h5>
                             <p class="text-white top-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim sed. Et facilisi sapien praesent vitae. </p>
-                            <button class="btn btn-light px-5 mt-3 mark-btn">Marketplace</button><br />
-                            <button class="btn btn-warning px-5 my-3 mark-btn">Marketplace</button>
+                            <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Marketplace<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
+                            <button class="btn btn-warning mt-3 mark-btn">Play Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                         </div>
                     </div>
                     <div class="col-lg-6" style = "position: relative">
-                        <img src = "./assets/img/chest.svg" class = "img-fluid" style = "position: absolute;  top: -50px; left: -50px; z-index: 0">
-                        <img src="./assets/img/boy.svg" class="img-fluid" style = "z-index: 2; position: absolute; margin: auto auto;right: 0" alt="">
+                        <img src="./assets/img/boy.svg" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -91,7 +90,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img src="./assets/img/bear.png" class="img-fluid" alt="">
+                        <img src="./assets/img/chest.svg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 d-flex align-items-center text-right">
                         <div>
@@ -168,7 +167,7 @@
 
     <section id="playnow" class="playnow"
         style="position: relative; height: 800px;overflow-x: hidden; overflow-y: hidden; background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), radial-gradient(17.32% 34.78% at 20.71% 26.77%, rgba(202, 252, 1, 0.15) 0%, rgba(202, 252, 1, 0) 100%), linear-gradient(180deg, #550058 0%, #BD40C8 100%); background-size: cover; background-repeat: no-repeat;">
-        <img src="./assets/img/roadmap.svg" style = "position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1;width: 100%;" alt="">
+        <img src="./assets/img/wavey.png" style = "position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1;width: 100%;" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 d-flex align-items-center">
@@ -180,8 +179,8 @@
                             facilisi
                             sapien praesent vitae. </p>
                         <div class = "d-flex">
-                            <img src="./assets/img/google play.png" class = "img-fluid mr-4" alt="">
-                            <img src="./assets/img/app store.png" class = "img-fluid" alt="">
+                            <img src="./assets/img/google play.png" class = "mr-4" style = "width: 200px; height: auto;" alt="">
+                            <img src="./assets/img/app store.png" style = "width: 250px; height: auto;" alt="">
                         </div>
                     </div>
                 </div>
@@ -196,14 +195,12 @@
 
 
     <section id="roadmap" class="roadmap">
-        <img src="./assets/img/roadmap road.png" style="position: absolute;top: 0; bottom: 0; right: 0; height: 100vh"
-            alt="">
-        <h1 class="text-right sec-head">ROADMAP</h1>
+        <!-- <h1 class="text-right sec-head">ROADMAP</h1>
         <div class="point point-1">
             <div class="d-flex align-items-center justify-content-center"
                 style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
                 1</div>
-            <div style="flex: 1">---------></div>
+            <div style="flex: 1"><img src="./assets/img/Arrow 1.png" class = "img-fluid" alt=""></div>
             <div style="width: 300px">
                 <h2 class="point-title">Lorem ipsum</h2>
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
@@ -216,7 +213,7 @@
                     style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
                     2</div>
             </div>
-            <div>---------></div>
+            <div><img src="./assets/img/Arrow 1 (1).png" class = "img-fluid" alt=""></div>
             <div style="width: 300px">
                 <h2 class="point-title">Lorem ipsum</h2>
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
@@ -229,7 +226,7 @@
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
                     sed. Et facilisi sapien praesent vitae. </p>
             </div>
-            <div>---------</div>
+            <div><img src="./assets/img/Arrow 1 (2).png" class = "img-fluid" alt=""></div>
             <div>
                 <div class="d-flex align-items-center justify-content-center"
                     style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
@@ -242,13 +239,13 @@
                 <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
                     sed. Et facilisi sapien praesent vitae. </p>
             </div>
-            <div>---------</div>
+            <div><img src="./assets/img/Arrow 1 (3).png" class = "img-fluid" alt=""></div>
             <div>
                 <div class="d-flex align-items-center justify-content-center"
                     style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
                     3</div>
             </div>
-        </div>
+        </div> -->
     </section>
     <section id="tokenomics" class="tokenomics" style="background-color:#7d097c;">
         <div class="container">
