--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <div
                             style="width: 80%; backdrop-filter: blur(4.5px); border-radius: 25px; background: rgba(96, 1, 82, 0.8);; text-align: center;padding: 20px;">
                             <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
-                            <h5 class="text-white mt-3 top-head">Lorem ipsum dolor sit amet consectetur. Sed lorem suspendisse faucibus eu.</h5>
-                            <p class="text-white top-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim sed. Et facilisi sapien praesent vitae. </p>
+                            <h5 class="text-white mt-3 top-head">Join the Play-to-Earn Revolution with Ether Surfers: The Ultimate Gaming Adventure!</h5>
+                            <p class="text-white top-desc">Experience Thrilling Gameplay, Earn Real Money, and Top the Leaderboards Today!</p>
                             <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Marketplace<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                             <button class="btn btn-warning mt-3 mark-btn">Play Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                         </div>
@@ -108,52 +108,44 @@
             <h1 class="text-center text-white card-head">Lorem ipsum dolor sit amet consectetur. Id lacus habitant morbi faucibus.
             </h1>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 py-3">
                     <div class="cardd">
                         <div>
-                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
-                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
-                                dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
-                                autem sed possimus tempora, cum alias.</p>
+                            <h6 class = "cardd-heading">Play-to-earn</h6>
+                            <p class = "cardd-desc">Discover a new level of gaming excitement with Ether Surfers, where your skills and quick thinking can earn you real money. With its pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the perfect choice for gamers looking to turn their passion into profit. Download the app and join the revolution today.</p>
                         </div>
                         <div class = "d-flex align-items-center">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 py-3">
                     <div class="cardd">
                         <div>
-                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
-                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
-                                dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
-                                autem sed possimus tempora, cum alias.</p>
+                            <h6 class = "cardd-heading">Staking Rewards</h6>
+                            <p class = "cardd-desc">By staking your SURFER tokens, you will be able to receive up to a 70% APY. The process will be straightforward and effortless, allowing you to grow your assets without the need for active trading.</p>
                         </div>
                         <div class = "d-flex align-items-center">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 py-3">
                     <div class="cardd">
                         <div>
-                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
-                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
-                                dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
-                                autem sed possimus tempora, cum alias.</p>
+                            <h6 class = "cardd-heading">NFTs & Marketplace</h6>
+                            <p class = "cardd-desc">The Surfer token will soon be connected to multiple blockchain networks, including Binance Chain, Arbitrum, and Optimism. This integration will provide users with the ability to directly trade Surfer tokens with native chain currencies, expanding its reach and increasing its exposure</p>
                         </div>
                         <div class = "d-flex align-items-center">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 py-3">
                     <div class="cardd">
                         <div>
-                            <h6 class = "cardd-heading">Lorem Ipsum</h6>
-                            <p class = "cardd-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, magni numquam unde
-                                dicta vero ipsa obcaecati vel ad earum expedita! Non doloremque quisquam laboriosam
-                                autem sed possimus tempora, cum alias.</p>
+                            <h6 class = "cardd-heading">Multichain Bridge</h6>
+                            <p class = "cardd-desc">The Surfer token will soon be connected to multiple blockchain networks, including Binance Chain, Arbitrum, and Optimism. This integration will provide users with the ability to directly trade Surfer tokens with native chain currencies, expanding its reach and increasing its exposure</p>
                         </div>
                         <div class = "d-flex align-items-center">
                             <img src="./assets/img/Vector.png" alt="">
@@ -173,11 +165,8 @@
                 <div class="col-lg-8 d-flex align-items-center">
                     <div style = "margin-top: 50px;">
                         <h1 class="sec-head playnowHeading">
-                            Lorem ipsum dolor sit amet consectetur. Sed lorem suspendisse faucibus eu.</h1>
-                        <p class="playnowContent mt-5 mb-5">
-                            Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim sed. Et
-                            facilisi
-                            sapien praesent vitae. </p>
+                            Download for free from PlayStore and AppStore!</h1>
+                        <p class="playnowContent mt-5 mb-5">Discover a new level of gaming excitement with Ether Surfers, where your skills and quick thinking can earn you real money. With its pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the perfect choice for gamers looking to turn their passion into profit. Download the app and join the revolution today.</p>
                         <div class = "d-flex">
                             <img src="./assets/img/google play.png" class = "mr-4" style = "width: 200px; height: auto;" alt="">
                             <img src="./assets/img/app store.png" style = "width: 250px; height: auto;" alt="">
