--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="cardd">
                         <div>
                             <h6 class = "cardd-heading">NFTs & Marketplace</h6>
-                            <p class = "cardd-desc">The Surfer token will soon be connected to multiple blockchain networks, including Binance Chain, Arbitrum, and Optimism. This integration will provide users with the ability to directly trade Surfer tokens with native chain currencies, expanding its reach and increasing its exposure</p>
+                            <p class = "cardd-desc">Our multi-chain Surfer Marketplace will allow you to buy, sell, and trade NFTs and in-game assets directly. All transactions will be processed on a secure and reliable platform, giving you peace of mind while you explore the thrilling world of NFT trading.</p>
                         </div>
                         <div class = "d-flex align-items-center">
                             <img src="./assets/img/Vector.png" alt="">
@@ -168,8 +168,8 @@
                             Download for free from PlayStore and AppStore!</h1>
                         <p class="playnowContent mt-5 mb-5">Discover a new level of gaming excitement with Ether Surfers, where your skills and quick thinking can earn you real money. With its pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the perfect choice for gamers looking to turn their passion into profit. Download the app and join the revolution today.</p>
                         <div class = "d-flex">
-                            <img src="./assets/img/google play.png" class = "mr-4" style = "width: 200px; height: auto;" alt="">
-                            <img src="./assets/img/app store.png" style = "width: 250px; height: auto;" alt="">
+                            <img src="./assets/img/google-play-icon-download-23.jpg" class = "mr-4" style = "width: 250px; height: auto;" alt="">
+                            <img src="./assets/img/app-store.jpg" style = "width: 250px; height: auto;" alt="">
                         </div>
                     </div>
                 </div>
