--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-        <section id="bear">
+        <!-- <section id="bear">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -100,12 +100,12 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </header>
 
     <section id="card" class=" cardpage" style=" background: #530f70;">
         <div class=" container">
-            <h1 class="text-center text-white card-head">Lorem ipsum dolor sit amet consectetur. Id lacus habitant morbi faucibus.
+            <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Subway Ecosystem
             </h1>
             <div class="row">
                 <div class="col-lg-6 py-3">
