--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 
 
     <section id="roadmap" class="roadmap">
+        <img src="./assets/img/roadmap.svg" class = "w-100 img-fluid" alt="">
         <!-- <h1 class="text-right sec-head">ROADMAP</h1>
         <div class="point point-1">
             <div class="d-flex align-items-center justify-content-center"
