--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
                             <h5 class="text-white mt-3 top-head">Join the Play-to-Earn Revolution with Ether Surfers: The Ultimate Gaming Adventure!</h5>
                             <p class="text-white top-desc">Experience Thrilling Gameplay, Earn Real Money, and Top the Leaderboards Today!</p>
-                            <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Marketplace<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
-                            <button class="btn btn-warning mt-3 mark-btn">Play Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
+                            <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Telegram<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
+                            <button class="btn btn-warning mt-3 mark-btn">Download Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                         </div>
                     </div>
                     <div class="col-lg-6" style = "position: relative">
